Add Service to get image from API

--- a/src/app/componentss/show-photos/show-photos.component.html
+++ b/src/app/componentss/show-photos/show-photos.component.html
@@ -1,1 +1,3 @@
-<p>show-photos works!</p>
+<button (click)="onClick()">Fetch new image</button>
+
+<img [src]="photoUrl" [alt]="photoDescription" />
